--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,14 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-这里把整个Activity_login的布局设置成相对布局，
-因为相对布局比较灵活，想咋放咋放
-看代码，上来就是三个 xmlns，xml这仨字母认识，ns这俩字母是namespace的缩写
-正是有了这些namespace的声明，才能在不同的xml中使用相同的id名，
-而不会造成使用时的冲突
--->
+
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -31,18 +24,15 @@
         android:background="@color/color_minefragment_top" >
 
         <TextView
-            android:id="@+id/tv_loginactivity_register"
+            android:id="@+id/tv_login_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="注册"
+            android:text="@string/text_register"
             android:textColor="#fff"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="30dp"
-            android:clickable="true"
-            android:onClick="onClick"
-            />
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="30dp"/>
     </RelativeLayout>
     <!--
      顶部三个东西摆放好之后
@@ -54,7 +44,7 @@
      这里显然是垂直vertical
      -->
     <LinearLayout
-        android:id="@+id/ll_loginactivity_two"
+        android:id="@+id/ll_loginActivity_two"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -68,30 +58,31 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
-                android:id="@+id/tv_loginactivity_username"
+                android:id="@+id/tv_login_username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="用户名："/>
+                android:text="@string/text_username"/>
             <EditText
-                android:id="@+id/et_loginactivity_username"
+                android:id="@+id/et_login_username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="手机号/邮箱/用户名"/>
+                android:hint="@string/login_phone"
+                android:layout_marginStart="10dp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
-                android:id="@+id/tv_loginactivity_password"
+                android:id="@+id/tv_login_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="密    码："/>
             <EditText
-                android:id="@+id/et_loginactivity_password"
+                android:id="@+id/et_login_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="登录密码"
+                android:hint="@string/login_password"
                 android:inputType="textPassword"/>
         </LinearLayout>
     </LinearLayout>
@@ -101,62 +92,18 @@
       这是应用了一个开源库，详细信息在loginActivity.java 中有注释
       -->
     <Button
-        android:id="@+id/bt_loginactivity_login"
+        android:id="@+id/bt_login_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ll_loginactivity_two"
+        android:layout_below="@+id/ll_loginActivity_two"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:background="@drawable/selector_loginactivity_button"
-        android:text="登录"
+        android:text="@string/bt_login"
         android:textColor="#fff"
-        android:gravity="center"
-        android:onClick="onClick"
-        />
-    <!--
-        为了App的人性化，
-        想到有以下三种无法密码登录的异常处理情况
-        一、密码错误，重新输入
-        二、忘记密码，重新修改密码
-        三、不想注册，通过短信验证登录
-        密码输错了，重新输入，这个没啥说的
-        忘记密码应该以一个可以点击的文字出现在登录按钮的左下方
-        短信验证登录也以一个可以点击的文字出现在登录按钮的右下方
-    -->
-    <TextView
-        android:id="@+id/tv_loginactivity_forget"
-        android:text="忘记密码"
-        android:textColor="#6E6B6B"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginVertical="50dp"
-        android:layout_below="@+id/bt_loginactivity_login"
-        android:layout_alignLeft="@+id/bt_loginactivity_login"
-        />
-    <TextView
-        android:id="@+id/tv_loginactivity_check"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="短信验证码登录"
-        android:textColor="#514F4F"
-        android:layout_marginRight="50dp"
-        android:layout_marginVertical="50dp"
-        android:layout_below="@+id/bt_loginactivity_login"
-        android:layout_alignRight="@+id/bt_loginactivity_login"
-        />
+        android:gravity="center" />
 
-    <TextView
-        android:id="@+id/tv_loginactivity_else"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_loginactivity_forget"
-        android:layout_centerInParent="true"
-        android:layout_marginVertical="30dp"
 
-        android:text="---------------------------第三方登录---------------------------"
-        android:textColor="#B3B3B3"
-        android:gravity="center"
-        />
+
 </RelativeLayout>
