--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,173 +1,188 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#eeeeee"
-    >
+    android:background="#eeeeee">
 
     <RelativeLayout
         android:id="@+id/rl_registeractivity_top"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:background="@color/color_minefragment_top"
-        >
+        android:background="@color/color_minefragment_top">
+
         <ImageView
-            android:id="@+id/iv_registeractivity_back"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/ic_left_back"
+            android:id="@+id/iv_register_back"
+            android:layout_width="16dp"
+            android:layout_height="17dp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:clickable="true"
-            android:onClick="onClick"
-            />
+            android:layout_marginStart="10dp"
+            android:background="@drawable/ic_left_back" />
 
         <TextView
             android:id="@+id/tv_registeractivity_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="注册"
-            android:textColor="#fff"
-            android:textSize="20dp"
-            android:layout_toRightOf="@+id/iv_registeractivity_back"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            />
+            android:layout_marginStart="20dp"
+            android:layout_toEndOf="@+id/iv_register_back"
+            android:text="@string/text_register"
+            android:textColor="#fff"
+            android:textSize="20sp" />
     </RelativeLayout>
 
     <LinearLayout
-        android:id="@+id/ll_registeractivity_body"
+        android:id="@+id/ll_register_body"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_below="@+id/rl_registeractivity_top"
-        android:layout_marginTop="10dp"
         android:layout_marginLeft="5dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="5dp"
-        >
+        android:orientation="vertical">
         <!-- 第一个文本编辑框  输入用户名 -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
-                android:id="@+id/tv_registeractivity_username"
+                android:id="@+id/tv_register_username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="用户名："/>
+                android:text="@string/text_username" />
+
             <EditText
-                android:id="@+id/et_registeractivity_username"
+                android:id="@+id/et_register_username"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:hint="请输入用户名"
+                android:layout_marginStart="10dp"
                 android:gravity="center_vertical"
-                android:layout_marginLeft="10dp"
-                />
+                android:hint="@string/register_input_username"
+                android:inputType="text" />
         </LinearLayout>
         <!-- 第二个文本编辑框  输入密码 -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
-                android:id="@+id/tv_registeractivity_password1"
+                android:id="@+id/tv_register_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="密    码："/>
+                android:text="密    码：" />
+
             <EditText
-                android:id="@+id/et_registeractivity_password1"
+                android:id="@+id/et_register_password"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginStart="10dp"
                 android:gravity="center_vertical"
-                android:layout_marginLeft="10dp"
-                android:inputType="textPassword"
-                android:hint="请输入密码" />
+                android:hint="@string/register_input_password"
+                android:inputType="textPassword" />
         </LinearLayout>
         <!-- 第三个文本编辑框  再次输入密码 -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
-                android:id="@+id/tv_registeractivity_password2"
+                android:id="@+id/tv_register_password2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="密    码："/>
+                android:text="密    码：" />
+
             <EditText
-                android:id="@+id/et_registeractivity_password2"
+                android:id="@+id/et_register_passwordAgain"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:hint="请再次输入密码"
+                android:layout_marginStart="10dp"
                 android:gravity="center_vertical"
-                android:layout_marginLeft="10dp"
-                android:inputType="textPassword"
-                />
+                android:hint="@string/register_input_passwordAgain"
+                android:inputType="textPassword" />
         </LinearLayout>
         <!-- 验证码部分 -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="15dp"
             android:layout_marginTop="10dp"
-            android:orientation="horizontal" >
+            android:layout_marginEnd="15dp"
+            android:orientation="horizontal">
             <!-- 第四个文本编辑框  输入验证码 -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
                 <TextView
-                    android:id="@+id/tv_registeractivity_phoneCodes"
+                    android:id="@+id/tv_register_phoneCode"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="验证码："/>
+                    android:text="@string/register_phoneCode" />
+
                 <EditText
-                    android:id="@+id/et_registeractivity_phoneCodes"
+                    android:id="@+id/et_register_phoneCode"
                     android:layout_width="0dp"
-                    android:layout_weight="3"
                     android:layout_height="50dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
-                    android:hint="请输入4位验证码" />
+                    android:layout_weight="3"
+                    android:hint="@string/register_input_phoneCode" />
 
-                <ImageView
-                    android:id="@+id/iv_registeractivity_showCode"
+                <Button
+                    android:id="@+id/bt_register_send"
                     android:layout_width="0dp"
-                    android:layout_height="70dp"
-                    android:layout_weight="1.5"
-                    android:clickable="true"
-                    android:onClick="onClick"
+                    android:layout_height="50dp"
                     android:layout_marginTop="-10dp"
-                    />
+                    android:layout_weight="1.5"
+                    android:text="@string/bt_send" />
             </LinearLayout>
+        </LinearLayout>
+
+        <?xml version="1.0" encoding="utf-8"?>
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <!--
+             RadioButton 要想实现多选一的效果必须放到RadioGroup 中,否则无法实现多选一的效果.
+             技巧:要面向RadioGroup 编程,不要面向RaidoButton 编程,否则将增加很大代码量
+             android:orientation="vertical":执行按钮组的方向,默认值是vertical.
+             RadioGroup的父类时LinearLayout,但方向的默认值不再是线性布局的水平方向了,而是改成了垂直方向.
+             -->
+            <RadioGroup
+                android:id="@+id/radioGroup_identity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                >
+                <RadioButton
+                    android:id="@+id/rb_register_userIdentity_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:checked="true"
+                    android:text="@string/register_userIdentity1" />
+                <RadioButton
+                    android:id="@+id/rb_register_userIdentity_kinderGarden"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:checked="false"
+                    android:text="@string/register_userIdentity2" />
+            </RadioGroup>
         </LinearLayout>
         <!-- 注册按钮 -->
         <Button
-            android:id="@+id/bt_registeractivity_register"
+            android:id="@+id/bt_register_register"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/selector_loginactivity_button"
-            android:textColor="#fff"
-            android:text="注册"
-            android:onClick="onClick"
             android:layout_marginTop="40dp"
-            />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:id="@+id/rl_registeractivity_bottom"
-            android:layout_marginTop="10dp"
-            >
-            <TextView
-                android:layout_centerInParent="true"
-                android:text="注册即代表同意《用户协议》"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </RelativeLayout>
+            android:background="@drawable/selector_loginactivity_button"
+            android:text="@string/bt_register"
+            android:textColor="#fff" />
 
     </LinearLayout>
 
